--- a/requirements.txt
+++ b/requirements.txt
@@ -90,7 +90,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytimeparse==1.1.8
 pytz==2022.1
-PyWavelets==1.3.0
+PyWavelets
 pywin32==303
 pywinpty==2.0.5
 pyzmq==22.3.0
