--- a/requirements.txt
+++ b/requirements.txt
@@ -90,8 +90,8 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytimeparse==1.1.8
 pytz==2022.1
-pypiwin32==223
 PyWavelets==1.3.0
+pywin32==303
 pywinpty==2.0.5
 pyzmq==22.3.0
 requests==2.27.1
