--- a/requirements.txt
+++ b/requirements.txt
@@ -91,8 +91,8 @@ python-dateutil==2.8.2
 pytimeparse==1.1.8
 pytz==2022.1
 PyWavelets==1.3.0
-pywin32==303
-pywinpty==2.0.5
+pypiwin32==223 
+pywinpty
 pyzmq==22.3.0
 requests==2.27.1
 requests-oauthlib==1.3.1
