--- a/requirements.txt
+++ b/requirements.txt
@@ -92,7 +92,7 @@ pytimeparse==1.1.8
 pytz==2022.1
 PyWavelets==1.3.0
 pypiwin32==223 
-pywinpty
+pypiwinpty
 pyzmq==22.3.0
 requests==2.27.1
 requests-oauthlib==1.3.1
