--- a/requirements.txt
+++ b/requirements.txt
@@ -100,7 +100,7 @@ Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.2.post1
 stack-data==0.2.0
-TA-Lib==0.4.24
+TA-Lib
 tenacity==8.0.1
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
